Use the shop page design from the “02-Shop_v4.html” page,Use the About page design frome the “04-About.html” page.

--- a/about.html
+++ b/about.html
@@ -17,11 +17,13 @@
       .loaded .load-icon {
         display: block;
       }
+
       .loaded * {
         -webkit-transition: none;
         -ms-transition: none;
         transition: none;
       }
+
       .load-icon {
         width: 100%;
         height: 100%;
@@ -34,6 +36,7 @@
         left: 0;
         background: #fff;
       }
+
       .load-icon:before {
         content: "";
         width: 64px;
@@ -47,6 +50,7 @@
     </style>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
   </head>
+
   <body class="loaded">
     <div class="load-icon"></div>
 
@@ -426,283 +430,141 @@
       <!-- BEGIN MAIN -->
       <main class="main">
         <!-- BEGIN INNER TOP -->
-        <div class="inner-top">
-          <div class="inner-top__main wrapper">
-            <div class="inner-top__cols">
-              <div class="inner-top__left">
-                <h1 class="inner-top__title">About</h1>
-                <div class="breadcrumbs">
-                  <ul class="breadcrumbs__list">
-                    <li class="breadcrumbs__item">
-                      <a class="breadcrumbs__link" href="#">Home</a>
-                    </li>
-                    <li class="breadcrumbs__item">About</li>
-                  </ul>
+        <div class="banner-inner-top">
+          <div class="wrapper container-content">
+            <div class="banner_title">
+              <h3>About us</h3>
+            </div>
+            <div class="about-banner">
+              <div class="hover-images">
+                <img src="https://via.placeholder.com/1710x700" class="img-responsive" alt="" />
+              </div>
+              <div class="banner-info">
+                <div class="banner-info__inner wrapper row align-items-center justify-content-center">
+                  <p>Zoa - New York store. <span>OPEN</span> NOW</p>
+                  <p>+01 2 345 67 89 10</p>
                 </div>
               </div>
-              <div class="inner-top__right">
-                <div class="inner-top__image" data-bg="https://via.placeholder.com/800x400"></div>
-              </div>
             </div>
-            <img
-              class="inner-top__bg"
-              src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-              data-lazy="assets/img/svg/vector-inner-top.svg"
-              alt=""
-            />
           </div>
         </div>
         <!-- INNER TOP END -->
 
         <!-- BEGIN ABOUT COMPANY -->
+
         <article class="about-company wrapper">
-          <div class="about-company__top">
-            <h2 class="about-company__title">All about company</h2>
-            <p class="about-company__text">Official representative of the world-famous clothing brand Mollee in Europe and the world.</p>
-          </div>
           <div class="about-company__cols">
             <div class="about-company__col">
+              <div class="about-content__image about-content__image_sm">
+                <img src="https://via.placeholder.com/250x164" data-lazy="https://via.placeholder.com/250x164" alt="" />
+              </div>
               <section class="about-section">
-                <h3 class="about-section__title">the beginning of our journey</h3>
-                <span class="about-section__year">2010</span>
+                <h3 class="about-section__title">A wayward <span>vision</span> in fashion</h3>
+                <p class="about-section__text">Housing an international selection of upcoming to established designers for over fifteen years.</p>
                 <p class="about-section__text">
-                  In 2010, our company celebrated its 10th anniversary - these are the years of acquired experience of trading around the world.
-                  <br />Join us among our clients! You can buy only original things from us. We offer products of your favorite brands - clothes,
-                  shoes, accessories, textiles and much more - quality products for every taste and age from Europe.
+                  Zoa stands for a personal and obstinate selection. Surprising with new designers every season, great attention is given to the
+                  unique & personal identity of all in-store designers. From clothing to jewellery, shoes & bags, each piece is chosen with special
+                  care.
                 </p>
+                <div class="about-content__image about-content_sign_image">
+                  <img src="https://via.placeholder.com/169x80" data-lazy="https://via.placeholder.com/169x80" alt="" />
+                </div>
               </section>
             </div>
             <div class="about-company__col">
-              <div class="about-stats">
-                <h3 class="collection-title">
-                  <span class="collection-title__count">2587</span>
-                  <span class="collection-title__plus">+</span>
-                  <span class="collection-title__text">Products for you</span>
-                </h3>
-                <img
-                  class="about-stats__vector"
-                  src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                  data-lazy="assets/img/svg/vector-about.svg"
-                  alt=""
-                />
+              <div class="about-content__image">
+                <img src="https://via.placeholder.com/470x700" data-lazy="https://via.placeholder.com/470x700" alt="" />
               </div>
-            </div>
-            <div class="about-company__col">
-              <div class="about-stats about-stats_bottom">
-                <h3 class="collection-title">
-                  <span class="collection-title__count">5649</span>
-                  <span class="collection-title__plus">+</span>
-                  <span class="collection-title__text">Satisfied clients</span>
-                </h3>
-                <img
-                  class="about-stats__vector"
-                  src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                  data-lazy="assets/img/svg/vector-about.svg"
-                  alt=""
-                />
-              </div>
-            </div>
-            <div class="about-company__col">
-              <section class="about-section">
-                <h3 class="about-section__title">who are we now?</h3>
-                <span class="about-section__year">2020</span>
-                <p class="about-section__text">
-                  We now have a team of more than 1,000 skilled workers and about 167 clothing brands that cooperate with us. Ordering in our store is
-                  a saving of time and effort to find what you need; assistance of experienced consultants in choosing a model. <br />Our specialists
-                  will help you specify your European size, tell you about fabrics and materials.
-                </p>
-              </section>
             </div>
           </div>
         </article>
         <!-- ABOUT COMPANY END -->
 
-        <!-- BEGIN DEAL OF THE WEEK -->
-        <section class="inner-deal">
-          <div class="inner-deal__cols wrapper">
-            <div class="inner-deal__left">
-              <div class="inner-deal__image" data-bg="https://via.placeholder.com/1040x800"></div>
-            </div>
-            <div class="inner-deal__right">
-              <span class="inner-deal__subtitle category-subtitle"><b>deal</b> of the week</span>
-              <h3 class="inner-deal__title">multi-brand <br />store of clothes</h3>
-              <p class="inner-deal__text">
-                We follow fashion trends and have been working for you for more than 20 years. A selection of the best, interesting, and most
-                importantly, boring outfits for different occasions.
-              </p>
-              <a class="inner-deal__button button" href="shop.html">
-                <span class="button__text">Shop now</span>
-              </a>
-            </div>
-          </div>
-        </section>
-        <!-- BEGIN DEAL OF THE WEEK END -->
-
         <!-- BEGIN ADVANTAGES -->
-        <div class="advantages wrapper">
+        <div class="about-detail advantages wrapper">
           <div class="advantages__list">
             <article class="advantage">
               <div class="advantage__content">
-                <div class="advantage__icon-wrap">
-                  <img
-                    class="advantage__icon"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/70x70"
-                    alt=""
-                  />
+                <div class="about-detail__info_box">
+                  <h4>origin</h4>
+                  <p>
+                    an aesthetically pleasing name, leaving <br />
+                    room for personal interpretation <br />
+                    through its actions.
+                  </p>
                 </div>
-                <h4 class="advantage__title">Free Shipping</h4>
-                <div class="advantage__line"></div>
-                <p class="advantage__text">Non aliqua reprehenderit reprehenderit culpa laboris nulla minim anim velit</p>
               </div>
-              <img
-                class="advantage__bg"
-                src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                data-lazy="assets/img/svg/vector-advantages.svg"
-                alt=""
-              />
             </article>
             <article class="advantage">
               <div class="advantage__content">
-                <div class="advantage__icon-wrap">
-                  <img
-                    class="advantage__icon"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/70x70"
-                    alt=""
-                  />
+                <div class="about-detail__info_box">
+                  <h4>team</h4>
+                  <p>
+                    three young individuals, convinced <br />
+                    that a lot has yet to be explored <br />
+                    in an indispensable and ubiquitous
+                  </p>
                 </div>
-                <h4 class="advantage__title">24/7 Customer Service</h4>
-                <div class="advantage__line"></div>
-                <p class="advantage__text">Non aliqua reprehenderit reprehenderit culpa laboris nulla minim anim velit</p>
               </div>
-              <img
-                class="advantage__bg"
-                src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                data-lazy="assets/img/svg/vector-advantages.svg"
-                alt=""
-              />
             </article>
             <article class="advantage">
               <div class="advantage__content">
-                <div class="advantage__icon-wrap">
-                  <img
-                    class="advantage__icon"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/70x70"
-                    alt=""
-                  />
+                <div class="about-detail__info_box">
+                  <h4>practicality</h4>
+                  <p>
+                    garments should look good, and <br />
+                    simultaneously making them <br />
+                    versatile is a nice challenge.
+                  </p>
                 </div>
-                <h4 class="advantage__title">Money Back Guarantee</h4>
-                <div class="advantage__line"></div>
-                <p class="advantage__text">Non aliqua reprehenderit reprehenderit culpa laboris nulla minim anim velit</p>
               </div>
-              <img
-                class="advantage__bg"
-                src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                data-lazy="assets/img/svg/vector-advantages.svg"
-                alt=""
-              />
             </article>
           </div>
         </div>
         <!-- ADVANTAGES END -->
 
-        <!-- BEGIN NEWSLETTER -->
-        <aside class="newsletter">
-          <div class="newsletter__banner" data-bg="https://via.placeholder.com/1680x450">
-            <div class="newsletter__main">
-              <div class="newsletter__bg">
-                <div class="newsletter__max">
-                  <h4 class="newsletter__title">Newsletter</h4>
-                  <p class="newsletter__text">Be the first to hear about deals, offers and upcoming collections.</p>
-                  <form>
-                    <div class="newsletter-form">
-                      <div class="newsletter-form__left">
-                        <input class="newsletter-form__input text-input" type="email" placeholder="Enter your email" />
-                      </div>
-                      <div class="newsletter-form__right">
-                        <button class="newsletter-form__button button">
-                          <span class="button__text">Subscribe</span>
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <img
-                  class="newsletter__vector"
-                  src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                  data-lazy="assets/img/svg/vector-newsletter.svg"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-        </aside>
-        <!-- NEWSLETTER END -->
-
         <!-- BEGIN BRANDS -->
         <div class="brands-block wrapper">
-          <ul class="brands">
+          <ul class="brands js-brand-carousel loaded">
             <li class="brands__item">
-              <a class="brands__link" href="#">
-                <div class="brands__cell">
-                  <img
-                    class="brands__logo brands__logo_1"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/184x76"
-                    alt=""
-                  />
-                </div>
-              </a>
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
             </li>
             <li class="brands__item">
-              <a class="brands__link" href="#">
-                <div class="brands__cell">
-                  <img
-                    class="brands__logo brands__logo_2"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/159x85"
-                    alt=""
-                  />
-                </div>
-              </a>
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
             </li>
             <li class="brands__item">
-              <a class="brands__link" href="#">
-                <div class="brands__cell">
-                  <img
-                    class="brands__logo brands__logo_3"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/138x116"
-                    alt=""
-                  />
-                </div>
-              </a>
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
             </li>
             <li class="brands__item">
-              <a class="brands__link" href="#">
-                <div class="brands__cell">
-                  <img
-                    class="brands__logo brands__logo_4"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/188x106"
-                    alt=""
-                  />
-                </div>
-              </a>
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
             </li>
             <li class="brands__item">
-              <a class="brands__link" href="#">
-                <div class="brands__cell">
-                  <img
-                    class="brands__logo brands__logo_5"
-                    src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="
-                    data-lazy="https://via.placeholder.com/161x82"
-                    alt=""
-                  />
-                </div>
-              </a>
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
+            </li>
+            <li class="brands__item">
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
+            </li>
+            <li class="brands__item">
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
+            </li>
+            <li class="brands__item">
+              <div class="brands__cell">
+                <img class="brands__logo" src="https://via.placeholder.com/170x100" data-lazy="https://via.placeholder.com/170x100" alt="" />
+              </div>
             </li>
           </ul>
         </div>
