--- a/product_page.html
+++ b/product_page.html
@@ -458,7 +458,7 @@
         <!-- INNER TOP END -->
 
         <!-- BEGIN PRODUCT CARD -->
-        <section class="product wrapper">
+        <section class="product wrapper container-content">
           <div class="product__cols">
             <!-- BEGIN LEFT COLUMN -->
             <div class="product__left">
@@ -481,18 +481,18 @@
                 </div>
                 <div class="product-slider loaded js-product-slider dots-2 dots-left">
                   <div class="product-slider__item">
-                    <a class="product-slider__link" href="https://via.placeholder.com/486x500" data-fancybox="gallery">
-                      <img class="product-slider__image" src="https://via.placeholder.com/486x500" alt="" />
+                    <a class="product-slider__link" href="https://via.placeholder.com/931x500" data-fancybox="gallery">
+                      <img class="product-slider__image" src="https://via.placeholder.com/931x500" alt="" />
                     </a>
                   </div>
                   <div class="product-slider__item">
-                    <a class="product-slider__link" href="https://via.placeholder.com/486x500" data-fancybox="gallery">
-                      <img class="product-slider__image" src="https://via.placeholder.com/486x500" alt="" />
+                    <a class="product-slider__link" href="https://via.placeholder.com/931x500" data-fancybox="gallery">
+                      <img class="product-slider__image" src="https://via.placeholder.com/931x500" alt="" />
                     </a>
                   </div>
                   <div class="product-slider__item">
-                    <a class="product-slider__link" href="https://via.placeholder.com/486x500" data-fancybox="gallery">
-                      <img class="product-slider__image" src="https://via.placeholder.com/486x500" alt="" />
+                    <a class="product-slider__link" href="https://via.placeholder.com/931x500" data-fancybox="gallery">
+                      <img class="product-slider__image" src="https://via.placeholder.com/931x500" alt="" />
                     </a>
                   </div>
                 </div>
